apps/cicd/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  # Argo CDのサービスが存在する'argocd'名前空間に作成
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Argo CDのUIはWebSocketも利用
    nginx.ingress.kubernetes.ioio/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: "argocd.lab.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
